@@ -1,3 +1,8 @@
+2014-11-17  Per Bothner  <per@bothner.com>
+
+	* LispLanguage.java (resolve): Error if module has both statements
+	and a submodule with the same classname.
+
 2014-11-17  Jamison Hope  <jrh@theptrgroup.com>
 
 	* LispReader.java (parseNumber): Add support for quaternion
