@@ -1,3 +1,7 @@
+2014-11-17  Per Bothner  <per@bothner.com>
+
+	* ModuleInfo.java (getModuleExpRaw): New method.
+
 2014-11-16  Per Bothner  <per@bothner.com>
 
 	* Compilation.java (error): Generalize parameter.
